#Main Added Adjugate, Minor, Cofactor Matrix.

--- a/MatrixLib.vcxproj
+++ b/MatrixLib.vcxproj
@@ -135,6 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MatrixLib.Math.Constants.h" />
+    <ClInclude Include="MatrixLib.Math.h" />
     <ClInclude Include="MatrixLib.Math.MatrixMxN.h" />
     <ClInclude Include="MatrixLib.Math.VectorN.h" />
   </ItemGroup>
